	Post here any database changes ok guys? [shadowlady]

	==== progress ====
	Ayathoya mobs == Added but using poring stats ( ? )
	Ayathoya items == Added but no effect ( all are "etc" itens)
	Skill databases == celest working on them i believe.

03/09
	* Added new items. Thanks to Landarma [Lupus]
02/23
	* New Cards: Some fixes, revisions, additions [Lupus]
	  According to the latest news:
	  Fixed Tirfing, Mysteltainn (swapped enemy sizes of the cards bonuses)
	  Added bonus: Munak+Bongun+Hyegun Cards -> +1 Allstats
	  Added Alice Card placement. (also added it for Spring Rabbit, Galapago, Otter) And put Alice Card into OCA 
		can't add new effects for 22 Fed Update Cards yet.
	  All the cards by 22Feb have been revised, but not all tested.
02/21
	* Added new item: Takius' Blindfold. thanks to Landarma [Lupus]
	* Revised New Cards, added missing effects, fixed bugs [Lupus]
	  ~20 cards to check left 8) But in 22 Feb some new cards have been announced T__T'
	* Added actual item_db.sql into sql-files. [Lupus]
	* item_db.txt: Added missing fields / removed extra fields from some new items V__V' [Lupus]
	* More monsters name fixes (GIANT_HONET -> GIANT_HORNET , etc) [Lupus]
	* Added actual mob_db.sql into sql-files. If you use SQL Mob DB then update it [Lupus]

02/19
	* Added released cards into the monsters drops. Fixed couple card names [Lupus]
	  (Arc Angeling -> Archangeling)

02/18
        * Added more new cards effects (thanks to DracoRPG at this time) [Lupus]
	  added missing bonus 'bAllStats' into doc/item_bonus.txt
        * Changed Goblin Leader Card to using bAddRace2 -- each player can only save
          10 AddDamageClass, so this would save some space for other cards ^^ [celest]
	* Started adding new cards effects. Also big thanks to Landarma [Lupus]

02/17
	* Added 4 columns into mob_db.txt & mob_db2.txt [Lupus]
	  If you were using SQL MOB DB, then update your SQL DB and import all data
	  from mob_db.txt mob_db2.txt