@@ -741,8 +741,8 @@
 1806,Hora_,Hora,4,32000,0,450,65,,1,3,33024,2,2,2,12,12,{},{}
 1807,Fist,Fist,4,53000,0,650,115,,1,0,33024,2,2,3,24,12,{},{}
 1808,Fist_,Fist,4,53000,0,650,115,,1,1,33024,2,2,3,24,12,{},{}
-1809,Claw,Claw,4,55000,0,500,86,,1,1,33024,2,2,3,24,12,{},{ bonus bStr,2; },
-1810,Claw_,Claw,4,55000,0,500,86,,1,2,33024,2,2,3,24,12,{},{ bonus bStr,2; },
+1809,Claw,Claw,4,67000,0,500,86,,1,1,33024,2,2,3,24,12,{},{ bonus bStr,2; },
+1810,Claw_,Claw,4,67000,0,500,86,,1,2,33024,2,2,3,24,12,{},{ bonus bStr,2; },
 1811,Finger,Finger,4,58000,0,500,97,,1,1,33024,2,2,3,24,12,{},{}
 1812,Finger_,Finger,4,58000,0,500,97,,1,2,33024,2,2,3,24,12,{},{}
 1813,Kaiser_Knuckle,Kaiser Knuckle,4,20,0,450,110,,1,0,33024,2,2,4,36,12,{},{ bonus bAtkEle,4; bonus2 bAddRace,1,5; bonus2 bAddEle,1,10; bonus2 bAddEle,2,10; bonus2 bAddEle,3,10; bonus2 bAddEle,4,10; }
