@@ -55,7 +55,7 @@ amatsu.gat,183,127,5	shop	Milk Merchant	90,519:-1
 ama_in01.gat,101,18,8	shop	Weapon Dealer	47,1401:-1,1404:-1,1407:-1,1451:-1,1454:-1,1457:-1,1460:-1,1463:-1,1410:-1
 //2nd set
 ama_in01.gat,89,28,4	shop	Armor Dealer	757,2211:-1,2401:-1,2403:-1,2501:-1,2503:-1,2101:-1,2103:-1,2305:-1,2321:-1,2332:-1,2314:-1,2627:-1
-ama_in01.gat,102,28,4	shop	Weapon Dealer	766,1207:-1,1216:-1,1107:-1,1122:-1,1116:-11154:-1,1407:-1,1457:-1,1354:-1,1519:-1
+ama_in01.gat,102,28,4	shop	Weapon Dealer	766,1207:-1,1216:-1,1107:-1,1122:-1,1116:-1,1154:-1,1407:-1,1457:-1,1354:-1,1519:-1
 ama_in01.gat,24,30,4	shop	Tool Dealer	763,1750:-1,1770:-1,611:-1,501:-1,502:-1,503:-1,504:-1,506:-1,645:-1,656:-1,601:-1,602:-1,1065:-1
 
 //=======================================================
@@ -204,7 +204,7 @@ yuno.gat,65,122,4	shop	Fruit Merchant	93,512:-1,513:-1,515:-1,516:-1
 yuno.gat,217,97,4	shop	Tool Dealer	83,611:-1,1750:-1,501:-1,502:-1,503:-1,504:-1,505:-1,506:-1,645:-1,656:-1,601:-1,602:-1
 yuno.gat,226,106,5	shop	Trader	97, 911:-1, 910:-1, 912:-1
 yuno.gat,197,115,4	shop	Pet Merchant	124, 537:-1, 643:-1, 10013:-1, 10014:-1
-yuno.gat,205,104,4	shop	Equip Dealer	84, 2340:-1, 2341:-1, 2411:-1, 2222:-1, 2230:-1; 1721:-1
+yuno.gat,205,104,4	shop	Equip Dealer	84, 2340:-1, 2341:-1, 2411:-1, 2222:-1, 2230:-1, 1721:-1
 yuno.gat,163,187,5	shop	Magic Dealer	90,717:-1,1601:-1,1604:-1,1607:-1,1610:-1,2232:-1,2321:-1,2332:-1
 yuno_in01.gat,25,34,4	shop	Tool Dealer	83,611:-1,1750:-1,501:-1,502:-1,503:-1,504:-1,505:-1,506:-1,645:-1,656:-1,601:-1,602:-1
 yuno_in01.gat,104,35,4	shop	Weapon Dealer	49,1750:-1,1751:-1,1101:-1,1701:-1,1201:-1,1204:-1,1207:-1,1210:-1,1213:-1,1216:-1,1601:-1,1604:-1,1607:-1,1610:-1
